# OpenTama

./: .gitignore  CHANGELOG.md  CHARACTER.md  CONTRIBUTING.md  HARDWARE.md  INSTALL.md  LICENSE  NOTICE  PUSH.md  README.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: slides.html  takoron_preview.html
examples/plugins/ir_ping/: entry.py  plugin.toml
examples/plugins/stats_card/: entry.py  plugin.toml
firmware/m5stickc/: README.md  platformio.ini
firmware/m5stickc/src/: ir_rx.cpp  ir_rx.h  ir_tx.cpp  ir_tx.h  main.cpp  opentama_proto.cpp  opentama_proto.h
opentama/: __init__.py  art.py  cli.py  core.py  garake.py  obex.py  proximity.py  sprites.py  stages.py  state.py  teams.py  wifi.py
opentama/displays/: __init__.py  _layout.py  iro.py  monokuro.py  wide.py
opentama/ir/: __init__.py  protocol.py  session.py  transport.py
opentama/plugins/: __init__.py  api.py  loader.py
scripts/: make_cover.py  make_preview.py
tests/: test_art.py  test_cli.py  test_core.py  test_displays.py  test_firmware_parity.py  test_garake.py  test_ir_protocol.py  test_ir_session.py  test_ir_transport.py  test_obex.py  test_plugins_capabilities.py  test_plugins_loader.py  test_proximity.py  test_sprites.py  test_stages.py  test_state.py  test_teams.py  test_wifi.py
