[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opentama"
version = "0.3.2"
description = "A Tamagotchi-style virtual pet that grows when you come to the office. Ships as a Claude Code skill."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenTama contributors" }]
readme = "README.md"
keywords = ["tamagotchi", "claude-code", "skill", "wifi", "office", "ガラケー"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Terminals",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]
ir = ["pyserial>=3.5"]

[project.scripts]
opentama = "opentama.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/opentama"
Repository = "https://github.com/your-org/opentama"
Issues = "https://github.com/your-org/opentama/issues"
Changelog = "https://github.com/your-org/opentama/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["opentama*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
